23-Oct-2003 by Matthias Braun
-make dedicated server start automatic. Only the configuration file is read, no
 need interactively do settings anymore.
-Documented dedicated server settings in README file
-Changed exception class to inherid from std::exception
-fixed signal handler to really shutdown the app

22-Oct-2003 by Ivo Danihelka
-split GameManager to BotGameManager, DedicatedGameManager
 and PlayerGameManager
-bot can be started from command line (-b option)

21-Oct-2003 by Matthias Braun
-fixed the missing unit pictures in build menu

14-Oct-2003 by Matthias Braun
-fixed crash when client disconnects or connection is lost

13-Oct-2003 by Matthias Braun
-fixed wrong const in Surface class
-don't allow copy constructing of surface class
-fixed some views which could still be moved outside the screen

12-Oct-2003 by Matthias Braun
-Fixed a bug in iXY classes.
-Added note about black screen to readme
-fixed bug where MiniMapView was drawing outside it's view space, leading to
 crashes.
-add signal handlers to make it abort more nicely in error case (don't stay in
 mouse/keyboard grab mode)
-fixed a series of bugs where I accidently passed a Surface pointer instead of a
 Surface to the blit functions. C++ was evil enough to use the
 Surface::Surface(bool) constructor to create a new Surface instead of getting
 me an error.
-fixed another crasher when outpost was selected from a strange position

11-Oct-2003 by Matthias Braun
-added a release script

05-Oct-2003 by Matthias Braun
-did some more code cleanup. all the Rect and XY classes cleaned up a bit and
 finally removed the codewiz.hpp file.

04-Oct-2003 by Matthias Braun
-rewrote the config system and completed config saving and loading
-fixed bug where minimap could be moved outside screen

02-Oct-2003 by Matthias Braun
-did refactoring work on the surface/DDHardSurface interfaces. DDHardSurface is
 now called ScreenSurface, and is used in 99% of all cases where we need to
 access video memory.