@@ -1,3 +1,6 @@
+23-Oct-2003 by Ivo Danihelka
+-implemented respawntype="Random" parameter
+
 23-Oct-2003 by Matthias Braun
 -make dedicated server start automatic. Only the configuration file is read, no
  need interactively do settings anymore.
